# ee3033_final

./: .gitignore  README.md  bringup.sh  ee3033.sh  note.txt
.catkin_tools/profiles/default/: devel_collisions.txt
launch/: ee3033_aliases.txt  ee3033_common.sh  ee3033_explore_mode.sh  ee3033_mapping_mode.sh
logs/darknet_ros/: build.make.014.log.stderr
src/ee3033_sim/: CMakeLists.txt
src/ee3033_sim/launch/: camera.launch  spawn_tb3_camera.launch  tb3_camera_bringup.launch  tb3_world_only.launch
src/ee3033_sim/models/drone/: model_proj2.sdf
src/ee3033_sim/models/turtle/: turtle.urdf
src/ee3033_sim/rviz/: proj1_slam.rviz
src/ee3033_sim/scripts/: multi_waypoint_nav.py
src/ee3033_sim/tb3_camera/urdf/: turtlebot3_burger.urdf.xacro
src/ee3033_sim/worlds/: empty_world.world  test_world.world  turtlebot3_house.world  turtlebot3_world.world
src/maze_explore/: CMakeLists.txt  package.xml
src/maze_explore/config/: multi_waypoint_nav_melodic_params.yaml
src/maze_explore/launch/: explore.launch
src/maze_explore/scripts/: multi_waypoint_nav.py
